2008-08-18  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/version.h: remove #include of config.h
	* device-src/vfs-device.c: #include amanda.h first

2008-08-15  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/debug.c: include backtraces on fatal errors
	* config/amanda/debugging.m4: look for glibc's backtrace support
	* configure.in: ditto

2008-08-05 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec:  Merged fixes from trunk .spec for
	  parsing redhat-release for fedora versions correctly.

2008-08-04 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec:  add %{tarver} macro and set the correct
	  minimum version per distro (Thanks to Jesse Angell for the rhel4 tip)

2008-07-30  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer.pm perl/Amanda/Cmdline.swg
	  perl/Amanda/Config.swg perl/Amanda/DB/Catalog.pm
	  perl/Amanda/Device.swg perl/Amanda/Logfile.swg 
	  perl/Amanda/Util.swg: POD cleanup
	* perl/Makefile.am: new files, rules to make HTML
	* perl/amperl.css: CSS file for online POD
	* perl/make_html.pl: make online POD

2008-07-30  Dustin J. Mitchell <dustin@zmanda.com>
	* man/Makefile.am man/amanda.css man/index.php man/xslt/html.xsl.in:
	  new files for HTML output
	* man/xslt/man.xsl.in: substitute XSLT_VERS
	* man/xml-source/amanda-devices.7.xml: tweaks
	* man/xml-source/amanda.8.xml: tweaks
	* man/xml-source/amanda.conf.5.xml: tweaks
	* man/xml-source/amgetconf.8.xml: tweaks
	* man/xml-source/amtoc.8.xml: tweaks

2008-07-30 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: removed activate-devpay from %files section

2008-07-30 Dan Locks <dwlocks@zmanda.com>
	* device-src/s3.c: Merged changes from 968 to work around a libcurl bug.
	* config/amanda/s3-device.m4: Same

2008-07-30  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Config.pl: add + to avoid perl-5.6.0 parsing bug
	* installcheck/amgetconf.pl: ditto

2008-07-28  Dustin J. Mitchell <dustin@zmanda.com>